[package]

name = "swell"
version = "0.0.1"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]

[dependencies.hyper]

git = "https://github.com/hyperium/hyper.git"

[dependencies.toml]

git = "https://github.com/alexcrichton/toml-rs.git"

[dependencies.lazy_static]

git = "https://github.com/Kimundi/lazy-static.rs"

[dependencies.log]

log = "0.2.5"

[dependencies.time]

time = "0.1.19"

[dependencies]

flate2 = "0.2"

[profile.dev]

opt-level = 2
debug = true

[profile.release]

opt-level = 3
